parser.output
Estado 92 conflitos: 1 de redução/redução


Gramática

    0 $accept: lines $end

    1 lines: lines line
    2      | line

    3 line: expr ENTER
    4     | attr ENTER
    5     | dtstrct ENTER
    6     | def ENTER
    7     | func ENTER
    8     | for ENTER
    9     | while ENTER
   10     | continue ENTER
   11     | break ENTER
   12     | pass ENTER
   13     | return ENTER
   14     | ENTER

   15 bool: TRUE
   16     | FALSE

   17 expr: expr PLUS expr
   18     | expr MINUS expr
   19     | expr STAR expr
   20     | expr OVER expr
   21     | MINUS expr
   22     | expr DOUBLESTAR expr
   23     | expr NOTEQUAL expr
   24     | expr EQEQUAL expr
   25     | expr LESS expr
   26     | expr LESSEQUAL expr
   27     | expr GREATER expr
   28     | expr GREATEREQUAL expr
   29     | LPAR expr RPAR
   30     | NAME
   31     | NUMBER

   32 attr: NAME EQUAL expr
   33     | NAME EQUAL dtstrct
   34     | NAME EQUAL func

   35 types: expr
   36      | STRING

   37 opt: types COMMA opt
   38    | types
   39    | %empty

   40 list: LSQB opt RSQB

   41 dict: LBRACE types COLON types RBRACE
   42     | LBRACE RBRACE

   43 tuple: LPAR types COMMA opt RPAR
   44      | LPAR RPAR

   45 dtstrct: list
   46        | dict
   47        | tuple

   48 args: NAME COMMA args
   49     | NAME

   50 def: DEF NAME LPAR args RPAR COLON
   51    | DEF NAME LPAR RPAR COLON

   52 func: NAME LPAR args RPAR
   53     | NAME LPAR types RPAR
   54     | NAME LPAR RPAR

   55 valid_types: list
   56            | STRING
   57            | NAME

   58 for: FOR NAME IN valid_types COLON

   59 condition: func
   60          | bool

   61 while: WHILE expr COLON
   62      | WHILE LPAR condition RPAR COLON
   63      | WHILE condition COLON

   64 pass: PASS

   65 break: BREAK

   66 continue: CONTINUE

   67 return: RETURN types
   68       | RETURN bool


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
NUMBER (258) 31
STRING (259) 36 56
TRUE (260) 15
FALSE (261) 16
PLUS (262) 17
MINUS (263) 18 21
STAR (264) 19
OVER (265) 20
DOUBLESTAR (266) 22
EQEQUAL (267) 24
NOTEQUAL (268) 23
LESS (269) 25
LESSEQUAL (270) 26
GREATER (271) 27
GREATEREQUAL (272) 28
IN (273) 58
LPAR (274) 29 43 44 50 51 52 53 54 62
RPAR (275) 29 43 44 50 51 52 53 54 62
EQUAL (276) 32 33 34
LSQB (277) 40
RSQB (278) 40
COMMA (279) 37 43 48
LBRACE (280) 41 42
RBRACE (281) 41 42
COLON (282) 41 50 51 58 61 62 63
FOR (283) 58
WHILE (284) 61 62 63
NAME (285) 30 32 33 34 48 49 50 51 52 53 54 57 58
ENTER (286) 3 4 5 6 7 8 9 10 11 12 13 14
DEF (287) 50 51
PASS (288) 64
BREAK (289) 65
CONTINUE (290) 66
RETURN (291) 67 68
UMINUS (292)


Não terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
lines (39)
    à esquerda: 1 2, à direita: 0 1
line (40)
    à esquerda: 3 4 5 6 7 8 9 10 11 12 13 14, à direita: 1 2
bool (41)
    à esquerda: 15 16, à direita: 60 68
expr (42)
    à esquerda: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31, à direita:
    3 17 18 19 20 21 22 23 24 25 26 27 28 29 32 35 61
attr (43)
    à esquerda: 32 33 34, à direita: 4
types (44)
    à esquerda: 35 36, à direita: 37 38 41 43 53 67
opt (45)
    à esquerda: 37 38 39, à direita: 37 40 43
list (46)
    à esquerda: 40, à direita: 45 55
dict (47)
    à esquerda: 41 42, à direita: 46
tuple (48)
    à esquerda: 43 44, à direita: 47
dtstrct (49)
    à esquerda: 45 46 47, à direita: 5 33
args (50)
    à esquerda: 48 49, à direita: 48 50 52
def (51)
    à esquerda: 50 51, à direita: 6
func (52)
    à esquerda: 52 53 54, à direita: 7 34 59
valid_types (53)
    à esquerda: 55 56 57, à direita: 58
for (54)
    à esquerda: 58, à direita: 8
condition (55)
    à esquerda: 59 60, à direita: 62 63
while (56)
    à esquerda: 61 62 63, à direita: 9
pass (57)
    à esquerda: 64, à direita: 12
break (58)
    à esquerda: 65, à direita: 11
continue (59)
    à esquerda: 66, à direita: 10
return (60)
    à esquerda: 67 68, à direita: 13


Estado 0

    0 $accept: . lines $end

    NUMBER    deslocar, e ir ao estado 1
    MINUS     deslocar, e ir ao estado 2
    LPAR      deslocar, e ir ao estado 3
    LSQB      deslocar, e ir ao estado 4
    LBRACE    deslocar, e ir ao estado 5
    FOR       deslocar, e ir ao estado 6
    WHILE     deslocar, e ir ao estado 7
    NAME      deslocar, e ir ao estado 8
    ENTER     deslocar, e ir ao estado 9
    DEF       deslocar, e ir ao estado 10
    PASS      deslocar, e ir ao estado 11
    BREAK     deslocar, e ir ao estado 12
    CONTINUE  deslocar, e ir ao estado 13
    RETURN    deslocar, e ir ao estado 14

    lines     ir ao estado 15
    line      ir ao estado 16
    expr      ir ao estado 17
    attr      ir ao estado 18
    list      ir ao estado 19
    dict      ir ao estado 20
    tuple     ir ao estado 21
    dtstrct   ir ao estado 22
    def       ir ao estado 23
    func      ir ao estado 24
    for       ir ao estado 25
    while     ir ao estado 26
    pass      ir ao estado 27
    break     ir ao estado 28
    continue  ir ao estado 29
    return    ir ao estado 30


Estado 1

   31 expr: NUMBER .

    $padrão  reduzir usando a regra 31 (expr)


Estado 2

   21 expr: MINUS . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 33


Estado 3

   29 expr: LPAR . expr RPAR
   43 tuple: LPAR . types COMMA opt RPAR
   44      | LPAR . RPAR

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    RPAR    deslocar, e ir ao estado 35
    NAME    deslocar, e ir ao estado 32

    expr   ir ao estado 36
    types  ir ao estado 37


Estado 4

   40 list: LSQB . opt RSQB

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 39 (opt)

    expr   ir ao estado 38
    types  ir ao estado 39
    opt    ir ao estado 40


Estado 5

   41 dict: LBRACE . types COLON types RBRACE
   42     | LBRACE . RBRACE

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    RBRACE  deslocar, e ir ao estado 41
    NAME    deslocar, e ir ao estado 32

    expr   ir ao estado 38
    types  ir ao estado 42


Estado 6

   58 for: FOR . NAME IN valid_types COLON

    NAME  deslocar, e ir ao estado 43


Estado 7

   61 while: WHILE . expr COLON
   62      | WHILE . LPAR condition RPAR COLON
   63      | WHILE . condition COLON

    NUMBER  deslocar, e ir ao estado 1
    TRUE    deslocar, e ir ao estado 44
    FALSE   deslocar, e ir ao estado 45
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 46
    NAME    deslocar, e ir ao estado 47

    bool       ir ao estado 48
    expr       ir ao estado 49
    func       ir ao estado 50
    condition  ir ao estado 51


Estado 8

   30 expr: NAME .
   32 attr: NAME . EQUAL expr
   33     | NAME . EQUAL dtstrct
   34     | NAME . EQUAL func
   52 func: NAME . LPAR args RPAR
   53     | NAME . LPAR types RPAR
   54     | NAME . LPAR RPAR

    LPAR   deslocar, e ir ao estado 52
    EQUAL  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 30 (expr)


Estado 9

   14 line: ENTER .

    $padrão  reduzir usando a regra 14 (line)


Estado 10

   50 def: DEF . NAME LPAR args RPAR COLON
   51    | DEF . NAME LPAR RPAR COLON

    NAME  deslocar, e ir ao estado 54


Estado 11

   64 pass: PASS .

    $padrão  reduzir usando a regra 64 (pass)


Estado 12

   65 break: BREAK .

    $padrão  reduzir usando a regra 65 (break)


Estado 13

   66 continue: CONTINUE .

    $padrão  reduzir usando a regra 66 (continue)


Estado 14

   67 return: RETURN . types
   68       | RETURN . bool

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    TRUE    deslocar, e ir ao estado 44
    FALSE   deslocar, e ir ao estado 45
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    bool   ir ao estado 55
    expr   ir ao estado 38
    types  ir ao estado 56


Estado 15

    0 $accept: lines . $end
    1 lines: lines . line

    $end      deslocar, e ir ao estado 57
    NUMBER    deslocar, e ir ao estado 1
    MINUS     deslocar, e ir ao estado 2
    LPAR      deslocar, e ir ao estado 3
    LSQB      deslocar, e ir ao estado 4
    LBRACE    deslocar, e ir ao estado 5
    FOR       deslocar, e ir ao estado 6
    WHILE     deslocar, e ir ao estado 7
    NAME      deslocar, e ir ao estado 8
    ENTER     deslocar, e ir ao estado 9
    DEF       deslocar, e ir ao estado 10
    PASS      deslocar, e ir ao estado 11
    BREAK     deslocar, e ir ao estado 12
    CONTINUE  deslocar, e ir ao estado 13
    RETURN    deslocar, e ir ao estado 14

    line      ir ao estado 58
    expr      ir ao estado 17
    attr      ir ao estado 18
    list      ir ao estado 19
    dict      ir ao estado 20
    tuple     ir ao estado 21
    dtstrct   ir ao estado 22
    def       ir ao estado 23
    func      ir ao estado 24
    for       ir ao estado 25
    while     ir ao estado 26
    pass      ir ao estado 27
    break     ir ao estado 28
    continue  ir ao estado 29
    return    ir ao estado 30


Estado 16

    2 lines: line .

    $padrão  reduzir usando a regra 2 (lines)


Estado 17

    3 line: expr . ENTER
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69
    ENTER         deslocar, e ir ao estado 70


Estado 18

    4 line: attr . ENTER

    ENTER  deslocar, e ir ao estado 71


Estado 19

   45 dtstrct: list .

    $padrão  reduzir usando a regra 45 (dtstrct)


Estado 20

   46 dtstrct: dict .

    $padrão  reduzir usando a regra 46 (dtstrct)


Estado 21

   47 dtstrct: tuple .

    $padrão  reduzir usando a regra 47 (dtstrct)


Estado 22

    5 line: dtstrct . ENTER

    ENTER  deslocar, e ir ao estado 72


Estado 23

    6 line: def . ENTER

    ENTER  deslocar, e ir ao estado 73


Estado 24

    7 line: func . ENTER

    ENTER  deslocar, e ir ao estado 74


Estado 25

    8 line: for . ENTER

    ENTER  deslocar, e ir ao estado 75


Estado 26

    9 line: while . ENTER

    ENTER  deslocar, e ir ao estado 76


Estado 27

   12 line: pass . ENTER

    ENTER  deslocar, e ir ao estado 77


Estado 28

   11 line: break . ENTER

    ENTER  deslocar, e ir ao estado 78


Estado 29

   10 line: continue . ENTER

    ENTER  deslocar, e ir ao estado 79


Estado 30

   13 line: return . ENTER

    ENTER  deslocar, e ir ao estado 80


Estado 31

   29 expr: LPAR . expr RPAR

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 81


Estado 32

   30 expr: NAME .

    $padrão  reduzir usando a regra 30 (expr)


Estado 33

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   21     | MINUS expr .
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 21 (expr)


Estado 34

   36 types: STRING .

    $padrão  reduzir usando a regra 36 (types)


Estado 35

   44 tuple: LPAR RPAR .

    $padrão  reduzir usando a regra 44 (tuple)


Estado 36

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr
   29     | LPAR expr . RPAR
   35 types: expr .

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69
    RPAR          deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 35 (types)


Estado 37

   43 tuple: LPAR types . COMMA opt RPAR

    COMMA  deslocar, e ir ao estado 83


Estado 38

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr
   35 types: expr .

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 35 (types)


Estado 39

   37 opt: types . COMMA opt
   38    | types .

    COMMA  deslocar, e ir ao estado 84

    $padrão  reduzir usando a regra 38 (opt)


Estado 40

   40 list: LSQB opt . RSQB

    RSQB  deslocar, e ir ao estado 85


Estado 41

   42 dict: LBRACE RBRACE .

    $padrão  reduzir usando a regra 42 (dict)


Estado 42

   41 dict: LBRACE types . COLON types RBRACE

    COLON  deslocar, e ir ao estado 86


Estado 43

   58 for: FOR NAME . IN valid_types COLON

    IN  deslocar, e ir ao estado 87


Estado 44

   15 bool: TRUE .

    $padrão  reduzir usando a regra 15 (bool)


Estado 45

   16 bool: FALSE .

    $padrão  reduzir usando a regra 16 (bool)


Estado 46

   29 expr: LPAR . expr RPAR
   62 while: WHILE LPAR . condition RPAR COLON

    NUMBER  deslocar, e ir ao estado 1
    TRUE    deslocar, e ir ao estado 44
    FALSE   deslocar, e ir ao estado 45
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 47

    bool       ir ao estado 48
    expr       ir ao estado 81
    func       ir ao estado 50
    condition  ir ao estado 88


Estado 47

   30 expr: NAME .
   52 func: NAME . LPAR args RPAR
   53     | NAME . LPAR types RPAR
   54     | NAME . LPAR RPAR

    LPAR  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 30 (expr)


Estado 48

   60 condition: bool .

    $padrão  reduzir usando a regra 60 (condition)


Estado 49

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr
   61 while: WHILE expr . COLON

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69
    COLON         deslocar, e ir ao estado 89


Estado 50

   59 condition: func .

    $padrão  reduzir usando a regra 59 (condition)


Estado 51

   63 while: WHILE condition . COLON

    COLON  deslocar, e ir ao estado 90


Estado 52

   52 func: NAME LPAR . args RPAR
   53     | NAME LPAR . types RPAR
   54     | NAME LPAR . RPAR

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    RPAR    deslocar, e ir ao estado 91
    NAME    deslocar, e ir ao estado 92

    expr   ir ao estado 38
    types  ir ao estado 93
    args   ir ao estado 94


Estado 53

   32 attr: NAME EQUAL . expr
   33     | NAME EQUAL . dtstrct
   34     | NAME EQUAL . func

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 3
    LSQB    deslocar, e ir ao estado 4
    LBRACE  deslocar, e ir ao estado 5
    NAME    deslocar, e ir ao estado 47

    expr     ir ao estado 95
    list     ir ao estado 19
    dict     ir ao estado 20
    tuple    ir ao estado 21
    dtstrct  ir ao estado 96
    func     ir ao estado 97


Estado 54

   50 def: DEF NAME . LPAR args RPAR COLON
   51    | DEF NAME . LPAR RPAR COLON

    LPAR  deslocar, e ir ao estado 98


Estado 55

   68 return: RETURN bool .

    $padrão  reduzir usando a regra 68 (return)


Estado 56

   67 return: RETURN types .

    $padrão  reduzir usando a regra 67 (return)


Estado 57

    0 $accept: lines $end .

    $padrão  aceitar


Estado 58

    1 lines: lines line .

    $padrão  reduzir usando a regra 1 (lines)


Estado 59

   17 expr: expr PLUS . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 99


Estado 60

   18 expr: expr MINUS . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 100


Estado 61

   19 expr: expr STAR . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 101


Estado 62

   20 expr: expr OVER . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 102


Estado 63

   22 expr: expr DOUBLESTAR . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 103


Estado 64

   24 expr: expr EQEQUAL . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 104


Estado 65

   23 expr: expr NOTEQUAL . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 105


Estado 66

   25 expr: expr LESS . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 106


Estado 67

   26 expr: expr LESSEQUAL . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 107


Estado 68

   27 expr: expr GREATER . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 108


Estado 69

   28 expr: expr GREATEREQUAL . expr

    NUMBER  deslocar, e ir ao estado 1
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr  ir ao estado 109


Estado 70

    3 line: expr ENTER .

    $padrão  reduzir usando a regra 3 (line)


Estado 71

    4 line: attr ENTER .

    $padrão  reduzir usando a regra 4 (line)


Estado 72

    5 line: dtstrct ENTER .

    $padrão  reduzir usando a regra 5 (line)


Estado 73

    6 line: def ENTER .

    $padrão  reduzir usando a regra 6 (line)


Estado 74

    7 line: func ENTER .

    $padrão  reduzir usando a regra 7 (line)


Estado 75

    8 line: for ENTER .

    $padrão  reduzir usando a regra 8 (line)


Estado 76

    9 line: while ENTER .

    $padrão  reduzir usando a regra 9 (line)


Estado 77

   12 line: pass ENTER .

    $padrão  reduzir usando a regra 12 (line)


Estado 78

   11 line: break ENTER .

    $padrão  reduzir usando a regra 11 (line)


Estado 79

   10 line: continue ENTER .

    $padrão  reduzir usando a regra 10 (line)


Estado 80

   13 line: return ENTER .

    $padrão  reduzir usando a regra 13 (line)


Estado 81

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr
   29     | LPAR expr . RPAR

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69
    RPAR          deslocar, e ir ao estado 82


Estado 82

   29 expr: LPAR expr RPAR .

    $padrão  reduzir usando a regra 29 (expr)


Estado 83

   43 tuple: LPAR types COMMA . opt RPAR

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 39 (opt)

    expr   ir ao estado 38
    types  ir ao estado 39
    opt    ir ao estado 110


Estado 84

   37 opt: types COMMA . opt

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 39 (opt)

    expr   ir ao estado 38
    types  ir ao estado 39
    opt    ir ao estado 111


Estado 85

   40 list: LSQB opt RSQB .

    $padrão  reduzir usando a regra 40 (list)


Estado 86

   41 dict: LBRACE types COLON . types RBRACE

    NUMBER  deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 34
    MINUS   deslocar, e ir ao estado 2
    LPAR    deslocar, e ir ao estado 31
    NAME    deslocar, e ir ao estado 32

    expr   ir ao estado 38
    types  ir ao estado 112


Estado 87

   58 for: FOR NAME IN . valid_types COLON

    STRING  deslocar, e ir ao estado 113
    LSQB    deslocar, e ir ao estado 4
    NAME    deslocar, e ir ao estado 114

    list         ir ao estado 115
    valid_types  ir ao estado 116


Estado 88

   62 while: WHILE LPAR condition . RPAR COLON

    RPAR  deslocar, e ir ao estado 117


Estado 89

   61 while: WHILE expr COLON .

    $padrão  reduzir usando a regra 61 (while)


Estado 90

   63 while: WHILE condition COLON .

    $padrão  reduzir usando a regra 63 (while)


Estado 91

   54 func: NAME LPAR RPAR .

    $padrão  reduzir usando a regra 54 (func)


Estado 92

   30 expr: NAME .
   48 args: NAME . COMMA args
   49     | NAME .

    COMMA  deslocar, e ir ao estado 118

    RPAR      reduzir usando a regra 30 (expr)
    RPAR      [reduzir usando a regra 49 (args)]
    $padrão  reduzir usando a regra 30 (expr)


Estado 93

   53 func: NAME LPAR types . RPAR

    RPAR  deslocar, e ir ao estado 119


Estado 94

   52 func: NAME LPAR args . RPAR

    RPAR  deslocar, e ir ao estado 120


Estado 95

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr
   32 attr: NAME EQUAL expr .

    PLUS          deslocar, e ir ao estado 59
    MINUS         deslocar, e ir ao estado 60
    STAR          deslocar, e ir ao estado 61
    OVER          deslocar, e ir ao estado 62
    DOUBLESTAR    deslocar, e ir ao estado 63
    EQEQUAL       deslocar, e ir ao estado 64
    NOTEQUAL      deslocar, e ir ao estado 65
    LESS          deslocar, e ir ao estado 66
    LESSEQUAL     deslocar, e ir ao estado 67
    GREATER       deslocar, e ir ao estado 68
    GREATEREQUAL  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 32 (attr)


Estado 96

   33 attr: NAME EQUAL dtstrct .

    $padrão  reduzir usando a regra 33 (attr)


Estado 97

   34 attr: NAME EQUAL func .

    $padrão  reduzir usando a regra 34 (attr)


Estado 98

   50 def: DEF NAME LPAR . args RPAR COLON
   51    | DEF NAME LPAR . RPAR COLON

    RPAR  deslocar, e ir ao estado 121
    NAME  deslocar, e ir ao estado 122

    args  ir ao estado 123


Estado 99

   17 expr: expr . PLUS expr
   17     | expr PLUS expr .
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    STAR        deslocar, e ir ao estado 61
    OVER        deslocar, e ir ao estado 62
    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 17 (expr)


Estado 100

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   18     | expr MINUS expr .
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    STAR        deslocar, e ir ao estado 61
    OVER        deslocar, e ir ao estado 62
    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 18 (expr)


Estado 101

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   19     | expr STAR expr .
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 19 (expr)


Estado 102

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   20     | expr OVER expr .
   22     | expr . DOUBLESTAR expr
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 20 (expr)


Estado 103

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . OVER expr
   22     | expr . DOUBLESTAR expr
   22     | expr DOUBLESTAR expr .
   23     | expr . NOTEQUAL expr
   24     | expr . EQEQUAL expr
   25     | expr . LESS expr
   26     | expr . LESSEQUAL expr
   27     | expr . GREATER expr
   28     | expr . GREATEREQUAL expr

    DOUBLESTAR  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 22 (expr)


Estado 104
